--- a/src/components/Dashboard/TripCard.css
+++ b/src/components/Dashboard/TripCard.css
@@ -1,11 +1,49 @@
 .trip-card {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 250px;
-  height: 150px;
+  height: 250px;
   margin: 20px;
-  border: 1px solid black;
+  padding: 10px;
+  box-shadow: 2px 4px 2px rgb(0 0 0 / 20%);
   border-radius: 5px;
+  background-color: #F8F5F2;
+  cursor: pointer;
 }
 
 .trip-card:hover {
   box-shadow: 2px 2px 6px rgb(0 0 0 / 40%);
+  text-shadow: 1px 1px 2px rgb(0 0 0 / 30%);
+}
+
+.trip-card-content {
+  padding: 10px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  color: #3f3f3f;
+  text-shadow: 1px 2px 2px rgb(0 0 0 / 20%);
+}
+
+.trip-name {
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.duration {
+  font-size: 18px;
+}
+
+.plus-icon {
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  border: 5px solid #557771;
+  font-size: 46px;
+  color: #557771;
+  text-align: center;
+  line-height: 40px;
+  box-shadow: 1px 1px 4px rgb(0 0 0 / 30%);
 }
