--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,4 +1,4 @@
-.sign-outer-container {
+.home-outer-container {
   height: 100vh;
   width: 100vw;
   background: linear-gradient(#EAE1D7 10%, #173d36);
@@ -10,7 +10,7 @@
   font-weight: bold;
 }
 
-.sign-title {
+.home-title {
   font-size: 4rem;
   text-shadow: 2px 2px 4px rgb(0 0 0 / 20%);
 }
@@ -43,7 +43,7 @@
   text-shadow: 2px 2px 2px rgb(0 0 0 / 20%);
 }
 
-.sign-form {
+.sign-in {
   padding: 0 20px;
 }
 
@@ -58,7 +58,7 @@
   box-shadow: 2px 2px 2px rgb(0 0 0 / 20%);
 }
 
-.sign-form > input[type='submit'] {
+.sign-in-email, .google-auth {
   width: auto;
   cursor: pointer;
   background-color: #557771;
@@ -66,9 +66,6 @@
   color: #F8F5F2;
   border-radius: 20px;
   padding: 10px 20px;
+  margin: 10px 0;
   box-shadow: 2px 2px 2px rgb(0 0 0 / 20%);
-}
-
-.google-auth {
-  cursor: pointer;
 }
