--- a/src/components/Direction/Direction.css
+++ b/src/components/Direction/Direction.css
@@ -29,6 +29,7 @@
   height: 40px;
   border-radius: 20px;
   background: #42C5D0 url('../../img/icons-direction.png') no-repeat center center;
+  background-size: 30px;
 }
 
 .direction-pin-name {
