--- a/src/components/Notes/Notes.css
+++ b/src/components/Notes/Notes.css
@@ -24,7 +24,7 @@
   display: inline-flex;
 }
 
-.notes-img {
+.notes-icon {
   width: 40px;
   height: 40px;
   border-radius: 20px;
@@ -51,4 +51,8 @@
 
 .display-none {
   display: none;
+}
+
+.saved {
+  color:rgb(17, 165, 116);
 }
