--- a/src/components/Tracks/Tracks.css
+++ b/src/components/Tracks/Tracks.css
@@ -10,3 +10,38 @@
   box-shadow: 2px 4px 2px rgb(0 0 0 / 20%);
   overflow-y: auto;
 }
+
+.search-input-block {
+  margin: 20px;
+  width: 280px;
+  height: 40px;
+  display: flex;
+  border-radius: 5px;
+  box-shadow: 2px 2px 6px rgb(0 0 0 / 20%);
+
+}
+
+.search-input {
+  background-color: #ffffff;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px 0 0 5px;
+  border: 0;
+  font-size: 16px;
+  padding: 0 10px;
+  outline: none;
+}
+
+.search-button {
+  float: right;
+  border: 0;
+  background-color: #557771;
+  background-image: url('/src/img/icons_search.png');
+  background-size: 30px;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 50px;
+  height: 100%;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+}
