modify Dashboard & Trip page UI design

--- a/src/components/Direction/Direction.css
+++ b/src/components/Direction/Direction.css
@@ -28,7 +28,7 @@
   width: 40px;
   height: 40px;
   border-radius: 20px;
-  background: #42C5D0 url('../../img/icons-direction.png') no-repeat center center;
+  background: #42C5D0 url('../../img/icons_direction.png') no-repeat center center;
   background-size: 30px;
 }
 
