--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -10,6 +10,7 @@
   background-color: #557771;
   width: 250px;
   height: 100%;
+  box-shadow: 2px 4px 2px rgb(0 0 0 / 20%);
 }
 
 .dashboard-avatar {
@@ -23,6 +24,7 @@
   font-size: 36px;
   font-weight: bold;
   box-shadow: 2px 4px 2px rgb(0 0 0 / 20%);
+  text-shadow: 2px 2px 2px rgb(0 0 0 / 20%);
 }
 
 .menu-item {
