--- a/src/components/Dashboard/TripCard.css
+++ b/src/components/Dashboard/TripCard.css
@@ -1,44 +1,70 @@
 .trip-card {
   position: relative;
   display: flex;
-  align-items: center;
-  justify-content: center;
   width: 250px;
-  height: 250px;
+  height: 280px;
   margin: 20px;
   padding: 10px;
-  box-shadow: 2px 4px 2px rgb(0 0 0 / 20%);
-  border-radius: 5px;
-  background-color: #F8F5F2;
+  border: 1px solid rgba(105, 105, 105, 0.1);
+  box-shadow: 2px 2px 2px rgb(0 0 0 / 20%);
   cursor: pointer;
+  border-radius: 5px;
 }
 
 .trip-card:hover {
   box-shadow: 2px 2px 6px rgb(0 0 0 / 40%);
-  text-shadow: 1px 1px 2px rgb(0 0 0 / 30%);
+}
+
+.trip-card-img {
+  width: 100%;
+  height: 75%;
+  background: #F8F5F2 url('../../img/london.jpeg') no-repeat center center;
+  background-size: cover;
+  border-radius: 5px;
+  opacity: 0.8;
 }
 
 .trip-card-content {
-  padding: 10px;
+  padding: 0 10px 0 10px;
+  height: 25%;
   position: absolute;
   left: 0;
   bottom: 0;
-  color: #3f3f3f;
-  text-shadow: 1px 2px 2px rgb(0 0 0 / 20%);
+  color: #6c757d;
+}
+
+.new-trip {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .trip-name {
-  font-size: 28px;
+  font-size: 26px;
+  line-height: 40px;
   font-weight: bold;
+  text-shadow: 1px 2px 2px rgb(0 0 0 / 20%);
+}
+
+.trip-card-date {
+  display: flex;
 }
 
 .duration {
-  font-size: 18px;
+  font-size: 15px;
+}
+
+.calendar-icon {
+  width: 20px;
+  height: 20px;
+  margin: 0 5px;
 }
 
 .plus-icon {
   width: 60px;
   height: 60px;
+  line-height: 280px;
   border-radius: 30px;
   border: 5px solid #557771;
   font-size: 46px;
