--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,15 +1,18 @@
 .search-input-block {
+  position: absolute;
+  left: 360px;
   margin: 20px;
   width: 280px;
   height: 40px;
   display: flex;
   border-radius: 5px;
   box-shadow: 2px 2px 6px rgb(0 0 0 / 20%);
-
+  z-index: 1;
 }
 
 .search-input {
   background-color: #ffffff;
+  opacity: 0.9;
   width: 100%;
   height: 100%;
   border-radius: 5px 0 0 5px;
