--- a/src/components/Tracks/Tracks.css
+++ b/src/components/Tracks/Tracks.css
@@ -1,47 +1,99 @@
+.side-bar {
+  width: 360px;
+  height: 100%;
+}
+
+.header {
+  position: relative;
+  width: 100%;
+  display: flex;
+  background-color: #557771;
+  padding: 10px 20px;
+  align-items: center;
+  z-index: 1;
+}
+
+.header-plan {
+  margin-right: auto;
+}
+
+.header-plan-place {
+  font-size: 36px;
+  color: #F8F5F2;
+  font-weight: bold;
+  text-shadow: 1px 2px 2px rgb(0 0 0 / 20%);
+}
+
+.header-avatar-circle {
+  width: 80px;
+  height: 80px;
+  margin: auto;
+  align-self: flex-end;
+  border-radius: 40px;
+  background-color: #EAE1D7;
+  line-height: 80px;
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  box-shadow: 2px 4px 2px rgb(0 0 0 / 20%);
+}
+
+.header-plan-date {
+  display: flex;
+  align-items: center;
+}
+
+.header-plan-duration {
+  font-size: 16px;
+  color: #F8F5F2;
+  font-weight: bold;
+  text-shadow: 1px 2px 2px rgb(0 0 0 / 20%);
+}
+
+a {
+  text-decoration: none;
+}
+
 .tracks-container {
   position: absolute;
-  width: 320px;
-  height: 400px;
-  background-color: #F8F5F2;
+  height: calc(100% - 100px);
+  display: flex;
   opacity: 0.9;
-  z-index: 2;
-  margin: 10px;
-  border-radius: 10px;
-  box-shadow: 2px 4px 2px rgb(0 0 0 / 20%);
+  border-right: 1px solid rgba(105, 105, 105, 0.1);
+}
+
+.trip-date {
+  height: 100%;
+  width: 50px;
+  background-color: #F8F5F2;
   overflow-y: auto;
 }
 
-.search-input-block {
-  margin: 20px;
-  width: 280px;
+.trip-date-block {
+  width: 40px;
   height: 40px;
-  display: flex;
-  border-radius: 5px;
-  box-shadow: 2px 2px 6px rgb(0 0 0 / 20%);
-
+  text-align: center;
+  margin: 10px auto;
+  padding: 3px;
+  border-radius: 50%;
 }
 
-.search-input {
-  background-color: #ffffff;
-  width: 100%;
-  height: 100%;
-  border-radius: 5px 0 0 5px;
-  border: 0;
-  font-size: 16px;
-  padding: 0 10px;
-  outline: none;
+.trip-date-month {
+  color: rgb(148, 148, 148);
+  font-weight: bold;
+  font-size: 12px;
+  margin-top: auto;
 }
 
-.search-button {
-  float: right;
-  border: 0;
-  background-color: #557771;
-  background-image: url('/src/img/icons_search.png');
-  background-size: 30px;
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 50px;
-  height: 100%;
-  border-radius: 0 5px 5px 0;
-  cursor: pointer;
+.trip-date-day {
+  color: rgb(148, 148, 148);
+  font-size: 12px;
+}
+
+.trip-date-block:hover {
+  background-color: #dadada;
+}
+
+.trip-date-focus {
+  background-color: #dadada;
 }
