--- a/src/components/Trip/Trip.css
+++ b/src/components/Trip/Trip.css
@@ -1,9 +1,8 @@
-.map {
-  height: calc(100vh - 113px - 40px);
-  width: 100%;
+.trip-container {
+  display: flex;
 }
 
 .map-region {
-  width: 100%;
-  height: 100%;
+  height: calc(100vh - 40px);
+  width: calc(100vw - 360px);
 }
