display distance and duration between pins when path changed; show loading img when fetching direction info

--- a/src/components/Dashboard/TripCard.css
+++ b/src/components/Dashboard/TripCard.css
@@ -80,7 +80,7 @@
   text-align: center;
   margin: 20px;
   line-height: 250px;
-  background: #ffffff url('../../img/icons_loading.gif') no-repeat center center;
+  background: #ffffff url('../../img/icons_loading_circle.gif') no-repeat center center;
 }
 
 .display-none {
