modify Note window UI

--- a/src/components/Direction/Direction.css
+++ b/src/components/Direction/Direction.css
@@ -7,21 +7,25 @@
   opacity: 0.9;
   z-index: 1;
   margin: 10px;
-  padding: 20px 10px;
+  padding: 10px;
   border-radius: 10px;
   box-shadow: 2px 4px 2px rgb(0 0 0 / 20%);
 }
 
 .direction-top-part {
-  height: 35%;
   border-bottom: 1px solid #9F9C9C;
-  font-size: 32px;
   font-weight: bold;
-  padding: 0 10px;
+  padding: 10px;
+}
+
+.direction-title-block {
+  display: inline-flex;
+  align-items: center;
 }
 
 .direction-title {
-  display: inline-flex;
+  margin: 0 10px;
+  font-size: 30px;
 }
 
 .direction-img {
@@ -33,7 +37,7 @@
 }
 
 .direction-pin-name {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
 }
 
