--- a/src/components/Tracks/Arrow.css
+++ b/src/components/Tracks/Arrow.css
@@ -1,15 +1,13 @@
 .arrow {
+  display: block;
+}
+
+.arrow-content {
   position: relative;
+  width: fit-content;
   margin: 0 auto 0 10px;
   display: flex;
   align-items: center;
-}
-
-.arrow-display-none {
-  display: none;
-}
-
-.path-icon {
   cursor: pointer;
 }
 
@@ -29,22 +27,28 @@
   width: 25px;
 }
 
-.dropdown-icon{
+.other-direction-fetching-icon {
+  width: 25px;
+  margin: 30px 60px;
+}
+
+.dropdown-icon {
   width: 10px;
   height: 10px;
   margin: 0 10px;
-  cursor: pointer;
 }
 
 .dropdownModal {
   position: absolute;
   top: 30px;
   left: 10px;
+  width: max-content;
   background-color: white;
   box-shadow: 0px 4px 12px rgb(0 0 0 / 20%);
   font-size: 12px;
   color: #6c757d;
   border-radius: 10px;
+  z-index: 1;
 }
 
 .other-direction-choice {
