--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,6 +1,16 @@
 .dashboard-container {
+  position: relative;
   display: flex;
   height: calc(100vh - 40px);
+}
+
+.creating-new-trip {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgb(255 255 255 / 80%) url('../../img/icons_dashboard_loading.gif') no-repeat center center;
+  background-size: 70px;
+  z-index: 1;
 }
 
 .dashboard-menu {
@@ -59,4 +69,5 @@
   flex-wrap: wrap;
   padding: 20px;
   overflow: auto;
+  height: 100%;
 }
