--- a/src/components/NewTrip/NewTrip.css
+++ b/src/components/NewTrip/NewTrip.css
@@ -77,6 +77,11 @@ input {
   cursor: pointer;
 }
 
-.create-btn:hover {
+.create-btn:hover:enabled {
   box-shadow: 2px 2px 6px rgb(0 0 0 / 40%);
+}
+
+.create-btn:disabled {
+  background-color: #bbc2c0;
+  cursor: auto;
 }
