--- a/src/components/Tracks/Arrow.css
+++ b/src/components/Tracks/Arrow.css
@@ -51,12 +51,12 @@
   z-index: 1;
 }
 
-.other-direction-choice {
+.other-direction-option {
   display: flex;
   padding: 8px 16px;
 }
 
-.other-direction-choice:hover {
+.other-direction-option:hover {
   background-color: #e4e4e4;
   cursor: pointer;
 }
