--- a/src/components/Trip/Trip.css
+++ b/src/components/Trip/Trip.css
@@ -1,10 +1,34 @@
 .trip-container {
+  position: relative;
   display: flex;
+}
+
+.fetching-data {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgb(255 255 255 / 80%) url('../../img/icons_dashboard_loading.gif') no-repeat center center;
+  background-size: 70px;
+  z-index: 2;
+}
+
+.path-updating {
+  position: absolute;
+  width: inherit;
+  height: 100%;
+  background: rgb(255 255 255 / 80%) url('../../img/icons_dashboard_loading.gif') no-repeat center center;
+  background-size: 70px;
+  z-index: 2;
 }
 
 .map-region {
   height: calc(100vh - 40px);
   width: calc(100vw - 360px);
+}
+
+.map {
+  height: 100%;
+  width: 100%;
 }
 
 .marker-label {
