--- a/src/components/Dashboard/TripCard.css
+++ b/src/components/Dashboard/TripCard.css
@@ -15,13 +15,66 @@
   box-shadow: 2px 2px 6px rgb(0 0 0 / 40%);
 }
 
-.trip-card-img {
+.trip-card-cover {
+  position: relative;
   width: 100%;
   height: 75%;
-  background: #F8F5F2 url('../../img/london.jpeg') no-repeat center center;
-  background-size: cover;
   border-radius: 5px;
   opacity: 0.8;
+}
+
+.trip-card-img {
+  width: 100%;
+  height: 100%;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.trip-card-option {
+  position: absolute;
+  display: flex;
+  width: 30px;
+  height: 30px;
+  background-color: rgb(255 255 255 / 50%);
+  border-radius: 15px;
+  right: 5px;
+  top: 5px;
+  align-items: center;
+  justify-content: center;
+}
+
+.trip-card-option:hover {
+  background-color: rgb(255 255 255 / 80%);
+}
+
+.trip-card-option > img {
+  width: 26px;
+  height: 26px;
+}
+
+.trip-card-option-modal {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  top: 35px;
+  right: 0px;
+  width: 100px;
+  padding: 10px;
+  background-color: white;
+  box-shadow: 0px 4px 12px rgb(0 0 0 / 50%);
+  font-size: 16px;
+  color: #6c757d;
+  border-radius: 10px;
+  z-index: 1;
+}
+
+.trip-card-option-modal > img {
+  width: 28px;
+  height: 28px;
+}
+
+.trip-card-option-modal > div {
+  margin: 0 5px;
 }
 
 .trip-card-content {
@@ -72,15 +125,6 @@
   text-align: center;
   line-height: 40px;
   box-shadow: 1px 1px 4px rgb(0 0 0 / 30%);
-}
-
-.loading-icon {
-  width: 250px;
-  height: 250px;
-  text-align: center;
-  margin: 20px;
-  line-height: 250px;
-  background: #ffffff url('../../img/icons_dashboard_loading.gif') no-repeat center center;
 }
 
 .display-none {
