--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 40px;
   line-height: 40px;
-  background-color: #CCCCCC;
+  background-color: #cecece;
   color: #212529;
   text-align: center;
 }
