--- a/src/components/NewTrip/NewTrip.css
+++ b/src/components/NewTrip/NewTrip.css
@@ -46,7 +46,7 @@
   margin: 15px 0;
 }
 
-input {
+.create-form-input {
   width: 70%;
   height: 45px;
   border-radius: 20px;
@@ -64,7 +64,7 @@ input {
 }
 
 .create-btn {
-  background-color: #557771;
+  background-color: #3A554B;
   color: #F8F5F2;
   margin: 20px auto 0 auto;
   width: 180px;
