--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -9,26 +9,26 @@
   width: 100%;
   height: 100%;
   background: rgb(255 255 255 / 80%) url('../../img/icons_dashboard_loading.gif') no-repeat center center;
-  background-size: 70px;
   z-index: 1;
 }
 
-.dashboard-menu {
+.dashboard-sidebar {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #557771;
+  background-color: #134161;
   width: 250px;
   height: 100%;
   box-shadow: 2px 4px 2px rgb(0 0 0 / 20%);
 }
 
 .dashboard-avatar {
+  position: relative;
   width: 150px;
   height: 150px;
   margin: 20px;
   border-radius: 75px;
-  background-color: #F1EBE4;
+  background-color: #EAE1D7;
   line-height: 150px;
   text-align: center;
   font-size: 36px;
@@ -37,13 +37,60 @@
   text-shadow: 2px 2px 2px rgb(0 0 0 / 20%);
 }
 
-.menu-item {
+.dashboard-avatar-loading-background {
+  background: #EAE1D7 url('../../img/icons_loading_circle.gif') no-repeat center center;
+  background-size: 60px;
+}
+
+.avatar-loading {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 60%);
+}
+
+.upload {
+  position: absolute;
+  top: 70px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.upload > img {
+  box-shadow: 2px 4px 2px rgb(0 0 0 / 20%);
+  border-radius: 15px;
+}
+
+input[type=file] {
+  display: none;
+}
+
+.dashboard-avatar-img {
+  width: 150px;
+  height: 150px;
+  border-radius: 75px;
+  border: 8px solid white;
+}
+
+.dashboard-username {
+  font-size: 20px;
+  color: #F1EBE4;
+  text-shadow: 1px 2px 2px rgb(0 0 0 / 20%);
+  margin-bottom: 40px;
+}
+
+.dashboard-menu {
+  width: 100%;
   font-size: 24px;
   color: #F1EBE4;
   text-shadow: 1px 2px 2px rgb(0 0 0 / 20%);
   margin-bottom: auto;
+  text-align: center;
 }
 
+.dashboard-menu-item {
+  padding: 10px;
+  background-color: #437da7;
+}
 
 .sign-out-btn {
   margin: 20px;
