--- a/src/components/NewTrip/NewTrip.css
+++ b/src/components/NewTrip/NewTrip.css
@@ -15,7 +15,7 @@
   height: auto;
   top: 20vh;
   border-radius: 10px;
-  background: #F8F5F2;
+  background: #F1EBE4;
   padding: 25px;
   font-size: 20px;
   color: #666666;
@@ -64,8 +64,8 @@
 }
 
 .create-btn {
-  background-color: #3A554B;
-  color: #F8F5F2;
+  background-color: #134161;
+  color: #F1EBE4;
   margin: 20px auto 0 auto;
   width: 180px;
   height: 50px;
