--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -12,7 +12,7 @@
   display: flex;
   height: 100vh;
   width: 100vw;
-  background: url('../../img/hero.png') no-repeat center center;
+  background: url('../../img/hero.jpeg') no-repeat center center;
   background-size: cover;
   opacity: 0.9;
 }
