--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,8 +1,3 @@
-.search-bar {
-  position: relative;
-  display: flex;
-}
-
 .search-input-block {
   position: absolute;
   margin: 20px;
@@ -10,7 +5,7 @@
   height: 40px;
   display: flex;
   border-radius: 5px;
-  box-shadow: 2px 2px 6px rgb(0 0 0 / 20%);
+  box-shadow: 2px 4px 12px rgb(0 0 0 / 30%);
   z-index: 1;
 }
 
@@ -45,20 +40,52 @@
   align-items: center;
   position: absolute;
   width: max-content;
-  top: 15px;
-  left: 310px;
+  top: 170px;
   padding: 5px;
   border: none;
-  border-radius: 20px;
+  border-radius: 24px;
   cursor: pointer;
   z-index: 1;
-  box-shadow: 2px 2px 6px rgb(0 0 0 / 20%);  background-color: #ececec;
+  box-shadow: 2px 4px 12px rgb(0 0 0 / 20%);
+  background-color: #ffffff;
 }
 
-.draw-btn:hover {
-  background-color: #ffffff;
+.draw-btn:disabled {
+  background-color: #CCCCCC;
+  cursor: not-allowed;
+  opacity: 0.9;
 }
 
 .draw-btn-icon {
   width: 36px;
+}
+
+.drawing-search-option {
+  position: absolute;
+  top: 60px;
+  border-radius: 10px;
+  margin: 10px 20px;
+  padding: 5px;
+  background-color: #ffffff;
+  z-index: 1;
+  box-shadow: 2px 4px 12px rgb(0 0 0 / 30%);
+}
+
+.drawing-search-option > div {
+  display: flex;
+  align-items: center;
+}
+
+.drawing-search-option > div > label {
+  display: flex;
+  margin: 3px;
+}
+
+
+.drawing-search-option > div > input[type='radio'] {
+  cursor: pointer;
+}
+
+.drawing-search-option-icon {
+  width: 20px;
 }
