--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -43,7 +43,7 @@
   top: 170px;
   padding: 5px;
   border: none;
-  border-radius: 24px;
+  border-radius: 28px;
   cursor: pointer;
   z-index: 1;
   box-shadow: 2px 4px 12px rgb(0 0 0 / 20%);
@@ -59,6 +59,19 @@
 .draw-btn-icon {
   width: 36px;
 }
+
+/* .alerts-border {
+  top: 170px;
+  padding: 5px;
+  border: 8px;
+  border-radius: 30px;
+  animation: blink 2s;
+  animation-iteration-count: 3;
+}
+
+@keyframes blink {
+  50% { border-color:#fff ; }
+} */
 
 .drawing-search-option {
   position: absolute;
