--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -108,7 +108,7 @@
   width: 50%;
 }
 
-.sign-modal {
+.auth-modal {
   position: absolute;
   display: flex;
   justify-content: center;
@@ -118,32 +118,35 @@
   background-color: rgb(0 0 0 / 50%);
 }
 
-.sign-container {
+.auth-container {
   position: fixed;
   top: 80px;
   min-width: 300px;
   width: 400px;
   border-radius: 20px;
   padding: 30px 40px 20px 40px;
-  background: #F1EBE4;
+  background: #ffffff;
   box-shadow: 0px 4px 12px rgb(0 0 0 / 20%);
-  color: #3f3f3f;
+  color: #737373;
 }
 
-.sign-title {
+.auth-title {
   font-size: 24px;
   text-align: center;
+  margin: 0 0 20px 0;
 }
 
-.sign-container > form {
+.auth-container > form {
   margin: 20px 0;
 }
 
-.sign-separate-line {
+.auth-separate-line {
   display: flex;
   align-items: center;
   justify-content: center;  font-size: 16px;
   text-align: center;
+  margin: 10px;
+  font-weight: normal;
 }
 
 .straight-line {
@@ -152,33 +155,37 @@
   margin: 0 10px;
 }
 
-.sign-button-container {
+.auth-button-container {
   display: flex;
 }
 
-.sign-switch-btn {
-  margin: 0 20px 10px 20px;
-  cursor: pointer;
-  font-size: 24px;
-  text-shadow: 2px 2px 2px rgb(0 0 0 / 20%);
-}
-
-.sign-form > input {
+.auth-form > input {
   height: 45px;
   width: 100%;
-  border: none;
+  border: 1px solid #e4e4e4;
   outline: none;
   border-radius: 10px;
   margin: 10px 0;
-  box-shadow: 2px 2px 2px rgb(0 0 0 / 20%);
   font-size: 18px;
   padding: 10px;
+  color: #646464;
 }
 
-.sign-form > input[type='submit'] {
+.auth-form > input::placeholder {
+  color: #b3b3b3;
+  font-size: 14px;
+  font-style: italic;
+}
+
+.auth-form > input[type='submit'] {
   background-color: #134161;
   color: #F1EBE4;
   border-radius: 20px;
+  cursor: pointer;
+}
+
+.auth-form > input[type='submit']:hover {
+  background-color: #264e6b;
 }
 
 .google-auth {
@@ -188,16 +195,51 @@
   align-items: center;
   cursor: pointer;
   background-color: #ffffff;
+  border: 1px solid #e4e4e4;
   border-radius: 20px;
   padding: 10px 20px;
-  margin: 25px 0 10px 0;
-  font-size: 18px;
-  box-shadow: 2px 2px 2px rgb(0 0 0 / 20%);
+  margin: 20px 0 10px 0;
 }
 
 .google-auth > img {
   position: absolute;
   left: 20px;
-  width: 32px;
-  height: 32px;
+}
+
+.google-auth:hover {
+  background-color: #f5f5f5;
+}
+
+.switch-form {
+  cursor: pointer;
+  text-align: center;
+  margin: 30px 0 10px 0;
+  font-size: 14px;
+  font-weight: normal;
+}
+
+.switch-form > span {
+  font-weight: bold;
+  margin: 0 5px;
+}
+
+.switch-form:hover {
+  color: #e8891b;
+}
+
+.alert {
+  color: #e05a5a;
+  font-size: 14px;
+  font-weight: normal;
+  text-align: center;
+}
+
+.user-state-loading {
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgb(255 255 255 / 70%) url('../../img/icons_dashboard_loading2.gif') no-repeat center center;
+  background-size: 80px;
+  z-index: 1;
 }
