--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -89,8 +89,9 @@ input[type=file] {
 }
 
 .dashboard-menu-item {
-  padding: 10px;
-  background-color: #437da7;
+  width: fit-content;
+  margin: auto;
+  border-bottom: 5px solid #437da7;
 }
 
 .sign-out-btn {
@@ -115,8 +116,211 @@ input[type=file] {
 .collections {
   display: flex;
   flex-wrap: wrap;
+  align-content: flex-start;
   padding: 20px;
   overflow: auto;
   height: 100%;
   width: 100%;
+}
+
+.plus-container {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.plus {
+  width: 60px;
+  height: 60px;
+  line-height: 280px;
+  border-radius: 30px;
+  border: 5px solid #9c9c9c;
+  font-size: 46px;
+  color: #9c9c9c;
+  text-align: center;
+  line-height: 40px;
+  box-shadow: 1px 1px 4px rgb(0 0 0 / 30%);
+}
+
+.new-trip-btn {
+  position: absolute;
+  bottom: -90px;
+  right: 20px;
+  width: 60px;
+  height: 60px;
+  border-radius: 30px;
+  background-color: #134161;
+  box-shadow: 4px 4px 8px rgb(0 0 0 / 40%);
+  text-align: center;
+  line-height: 60px;
+  font-size: 28px;
+  color: #F1EBE4;
+  z-index: 1;
+}
+
+.new-trip-btn:hover {
+  background-color: #264e6b;
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 810.01px) {
+  .new-trip-btn {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 810px) and (min-width: 620.01px) {
+  .collections {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .collections > div {
+    justify-self: center;
+  }
+
+  .dashboard-container {
+    display: block;
+    height: calc(100vh - 100px - 40px);
+  }
+
+  .dashboard-sidebar {
+    width: auto;
+    height: 100px;
+    padding: 10px 20px;
+    flex-direction: row;
+  }
+
+  .dashboard-username {
+    position: absolute;
+    top: 10px;
+    left: 110px;
+  }
+
+  .dashboard-avatar {
+    width: 80px;
+    height: 80px;
+    border-radius: 40px;
+    line-height: 0;
+    margin: 0;
+  }
+
+  .dashboard-avatar-img {
+    width: 80px;
+    height: 80px;
+    border-radius: 40px;
+    border: 4px solid white;
+  }
+
+  .upload {
+    top: 60px;
+    right: -5px;
+  }
+
+  .upload > img {
+    width: 25px;
+  }
+
+  .dashboard-menu {
+    font-size: 20px;
+    margin: 0;
+    padding: 0 30px;
+    text-align: start;
+    align-self: flex-end;
+  }
+
+  .dashboard-menu-item {
+    padding: 0;
+    position: absolute;
+    top: 68px;
+    border-bottom: 6px solid #437da7;
+    background-color: transparent;
+  }
+
+  .sign-out-btn {
+    margin: 0;
+    align-self: flex-end;
+    height: auto;
+    width: 150px;
+    font-size: 18px;
+    padding: 5px;
+  }
+
+  .new-trip {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 620px) and (min-width: 360px) {
+  .dashboard-container {
+    display: block;
+    height: calc(100vh - 100px - 40px);
+  }
+
+  .dashboard-sidebar {
+    width: auto;
+    height: 100px;
+    padding: 10px;
+    flex-direction: row;
+  }
+
+  .dashboard-username {
+    position: absolute;
+    top: 10px;
+    left: 100px;
+  }
+
+  .dashboard-avatar {
+    width: 80px;
+    height: 80px;
+    border-radius: 40px;
+    line-height: 0;
+    margin: 0;
+  }
+
+  .dashboard-avatar-img {
+    width: 80px;
+    height: 80px;
+    border-radius: 40px;
+    border: 4px solid white;
+  }
+
+  .upload {
+    top: 60px;
+    right: -5px;
+  }
+
+  .upload > img {
+    width: 25px;
+  }
+
+  .dashboard-menu {
+    font-size: 18px;
+    margin: 0;
+    padding: 0 20px;
+    text-align: start;
+    align-self: flex-end;
+  }
+
+  .dashboard-menu-item {
+    padding: 0;
+    position: absolute;
+    top: 70px;
+    border-bottom: 6px solid #437da7;
+    background-color: transparent;
+  }
+
+  .sign-out-btn {
+    margin: 0;
+    align-self: flex-end;
+    height: auto;
+    width: 150px;
+    font-size: 16px;
+    padding: 5px;
+  }
+
+  .new-trip {
+    display: none;
+  }
 }
