--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -113,7 +113,7 @@
   width: 400px;
   border-radius: 20px;
   padding: 30px 40px 20px 40px;
-  background: #ffffff;
+  background-color: #ffffff;
   box-shadow: 0px 4px 12px rgb(0 0 0 / 20%);
   color: #737373;
 }
@@ -269,7 +269,7 @@
 
 }
 
-@media only screen and (max-width: 600px) and (min-width: 360px) {
+@media only screen and (max-width: 600px) {
   .home-hero {
     background-size: cover;
   }
