--- a/src/components/Notes/Notes.css
+++ b/src/components/Notes/Notes.css
@@ -1,5 +1,6 @@
 .notes-container {
   position: absolute;
+  top: 50px;
   right: 0;
   width: 300px;
   height: 400px;
@@ -100,4 +101,11 @@
   float: right;
   line-height: 35px;
   margin-right: 5px;
+}
+
+@media only screen and (max-width: 700px) {
+  .notes-container {
+    width: 250px;
+    height: 320px;
+  }
 }
