--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -102,3 +102,15 @@
 .drawing-search-option-icon {
   width: 20px;
 }
+
+@media only screen and (max-width: 700px) {
+  .search-input-block {
+    top: -15px;
+    left: -15px;
+  }
+
+  .drawing-search-option {
+    top: 45px;
+    margin: 5px;
+  }
+}
