--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -49,27 +49,14 @@
   transform: translate(-50%, 60%);
 }
 
-.upload {
-  position: absolute;
-  top: 70px;
-  right: 10px;
-  cursor: pointer;
-}
-
-.upload > img {
-  box-shadow: 2px 4px 2px rgb(0 0 0 / 20%);
-  border-radius: 15px;
-}
-
-input[type=file] {
-  display: none;
-}
-
 .dashboard-avatar-img {
   width: 150px;
   height: 150px;
   border-radius: 75px;
-  border: 8px solid white;
+  border: 5px solid #fFffff;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
 }
 
 .dashboard-username {
@@ -78,7 +65,7 @@ input[type=file] {
   white-space: nowrap;
   text-overflow: ellipsis;
   padding: 0 20px;
-  font-size: 20px;
+  font-size: 18px;
   color: #F1EBE4;
   text-shadow: 1px 2px 2px rgb(0 0 0 / 20%);
   margin-bottom: 40px;
@@ -87,7 +74,7 @@ input[type=file] {
 
 .dashboard-menu {
   width: 100%;
-  font-size: 24px;
+  font-size: 22px;
   color: #F1EBE4;
   text-shadow: 1px 2px 2px rgb(0 0 0 / 20%);
   margin-bottom: auto;
@@ -95,28 +82,42 @@ input[type=file] {
 }
 
 .dashboard-menu-item {
-  width: fit-content;
-  margin: auto;
+  width: 100%;
+  margin: 25px 0;
+}
+
+.dashboard-menu-item > a {
+  color: #F1EBE4;
+  text-decoration: none;
+  margin: 10px 20px;
+  font-size: 20px;
+}
+
+.page-focused {
   border-bottom: 5px solid #437da7;
 }
 
+.dashboard-menu-item:hover {
+  border-right: 5px solid #F1EBE4;
+  cursor: pointer;
+}
+
 .sign-out-btn {
-  margin: 20px;
   background-color: #F1EBE4;
   color: #3f3f3f;
-  width: 100px;
-  height: 40px;
-  padding: 5px;
-  font-size: 20px;
+  height: 30px;
+  padding: 5px 10px;
+  font-size: 16px;
   border: none;
   border-radius: 25px;
   box-shadow: 2px 2px 2px rgb(0 0 0 / 20%);
   cursor: pointer;
+  margin: 20px 0;
 }
 
 .sign-out-btn:hover {
   box-shadow: 2px 2px 6px rgb(0 0 0 / 40%);
-  text-shadow: 1px 1px 1px rgb(0 0 0 / 30%);
+  text-shadow: 1px 1px 1px rgb(0 0 0 / 20%);
 }
 
 .collections {
@@ -170,8 +171,49 @@ input[type=file] {
   cursor: pointer;
 }
 
+.hamburger {
+  cursor: pointer;
+}
+
+.hamburger-menu {
+  background-color: #ffffff;
+  position: absolute;
+  right: 20px;
+  top: 70px;
+  z-index: 1;
+  color: #3f3f3f;
+  font-size: 18px;
+  box-shadow: 2px 4px 12px rgb(0 0 0 / 30%);
+  padding: 10px;
+}
+
+.hamburger-menu > a {
+  color: #3f3f3f;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.nav-btn {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  padding: 10px 30px;
+}
+
+.nav-btn:hover {
+  background-color: #ececec;
+}
+
+.nav-btn > div {
+  margin: 0 10px;
+}
+
 @media only screen and (min-width: 810.01px) {
   .new-trip-btn {
+    display: none;
+  }
+
+  .hamburger {
     display: none;
   }
 }
@@ -195,7 +237,6 @@ input[type=file] {
   .dashboard-sidebar {
     width: auto;
     height: 100px;
-    padding: 10px 20px;
     flex-direction: row;
   }
 
@@ -205,6 +246,7 @@ input[type=file] {
     top: 10px;
     left: 110px;
     text-align: left;
+    padding: 0;
   }
 
   .dashboard-avatar {
@@ -212,7 +254,7 @@ input[type=file] {
     height: 80px;
     border-radius: 40px;
     line-height: 0;
-    margin: 0;
+    margin: auto 20px;
   }
 
   .dashboard-avatar-img {
@@ -232,31 +274,39 @@ input[type=file] {
   }
 
   .dashboard-menu {
+    height: 30px;
+    display: flex;
     font-size: 20px;
     margin: 0;
-    padding: 0 30px;
     text-align: start;
     align-self: flex-end;
   }
 
   .dashboard-menu-item {
+    width: 120px;
     padding: 0;
-    position: absolute;
-    top: 68px;
-    border-bottom: 6px solid #437da7;
     background-color: transparent;
+    line-height: auto;
+    margin: 0;
+    line-height: 20px;
+  }
+
+  .dashboard-menu-item:hover {
+    border-right: none;
+    border-bottom: 5px solid #F1EBE4;
   }
 
   .sign-out-btn {
-    margin: 0;
-    align-self: flex-end;
-    height: auto;
-    width: 150px;
-    font-size: 18px;
-    padding: 5px;
+    align-self: end;
+    margin: 0 20px 10px auto;
+    width: 120px;
   }
 
   .new-trip {
+    display: none;
+  }
+
+  .hamburger {
     display: none;
   }
 }
@@ -291,11 +341,9 @@ input[type=file] {
   }
 
   .dashboard-username {
-    position: absolute;
     max-width: calc(100% - 120px);
     padding: 0;
-    top: 10px;
-    left: 100px;
+    margin: 0 10px;
     text-align: left;
   }
 
@@ -324,31 +372,25 @@ input[type=file] {
   }
 
   .dashboard-menu {
-    font-size: 18px;
-    margin: 0;
-    padding: 0 20px;
-    text-align: start;
-    align-self: flex-end;
+    display: none;
   }
 
   .dashboard-menu-item {
     padding: 0;
     position: absolute;
     top: 70px;
-    border-bottom: 6px solid #437da7;
     background-color: transparent;
   }
 
   .sign-out-btn {
-    margin: 0;
-    align-self: flex-end;
-    height: auto;
-    width: 150px;
-    font-size: 16px;
-    padding: 5px;
+    display: none;
   }
 
   .new-trip {
     display: none;
+  }
+
+  .hamburger {
+    margin-left: auto;
   }
 }
