--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,3 +1,16 @@
+.profile-map {
+  max-width: 80vw;
+  height: 60vh;
+  border-radius: 30px;
+  margin: 160px auto;
+}
+
+.profile-map > div {
+  width: 100%;
+  height: 100%;
+  border-radius: 30px;
+}
+
 .profile-nav {
   height: 60px;
   background-color: #134161;
