--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -102,7 +102,7 @@
   cursor: pointer;
 }
 
-.sign-out-btn {
+.dashboard-sign-out-btn {
   background-color: #F1EBE4;
   color: #3f3f3f;
   height: 30px;
@@ -115,7 +115,7 @@
   margin: 20px 0;
 }
 
-.sign-out-btn:hover {
+.dashboard-sign-out-btn:hover {
   box-shadow: 2px 2px 6px rgb(0 0 0 / 40%);
   text-shadow: 1px 1px 1px rgb(0 0 0 / 20%);
 }
@@ -283,7 +283,7 @@
   }
 
   .dashboard-menu-item {
-    width: 120px;
+    width: fit-content;
     padding: 0;
     background-color: transparent;
     line-height: auto;
@@ -296,7 +296,7 @@
     border-bottom: 5px solid #F1EBE4;
   }
 
-  .sign-out-btn {
+  .dashboard-sign-out-btn {
     align-self: end;
     margin: 0 20px 10px auto;
     width: 120px;
@@ -382,7 +382,7 @@
     background-color: transparent;
   }
 
-  .sign-out-btn {
+  .dashboard-sign-out-btn {
     display: none;
   }
 
